# modules

module00/ex1/: ft_plot_area.py
module00/ex2/: ft_harvest_total.py
module00/ex5/: ft_count_harvest_recursive.py
module00/ex6/: ft_garden_summary.py
module01/ex1/: ft_garden_data.py
module01/ex2/: ft_plant_growth.py
module01/ex3/: ft_plant_factory.py
module01/ex4/: ft_garden_security.py
module01/ex5/: ft_plant_types.py
module01/ex6/: ft_garden_analytics.py
module02/ex0/: ft_first_exception.py
module02/ex1/: ft_different_errors.py
module02/ex2/: ft_custom_errors.py
module02/ex3/: ft_finally_block.py
module02/ex4/: ft_raise_errors.py
module02/ex5/: ft_garden_management.py
module03/ex0/: ft_command_quest.py
module03/ex1/: ft_score_analytics.py
module03/ex2/: ft_coordinate_system.py
module03/ex3/: ft_achievement_tracker.py
module03/ex4/: ft_inventory_system.py
module03/ex5/: ft_data_stream.py
module03/ex6/: ft_analytics_dashboard.py
module04/: ainfo.txt
module04/data-generator-tools/: sample_data.json
module04/ex0/: ft_ancient_text.py
module06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_sacred_scroll.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
module07/: battle.py  capacitor.py  tournament.py
module08/ex1/: loading.py  pyproject.toml  requirements.txt
module08/ex2/: oracle.py  (+1 more)
module09/: a.txt
moduleold06/: ft_import_transmutation.py  ft_pathway_debate.py
(+25 files in other folders)
