[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data loading exercise"
authors = ["matrix <matrix@matrix.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^1.26.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"